Project progress, fixed grid alignment

--- a/assets/css/modules/_variables.scss
+++ b/assets/css/modules/_variables.scss
@@ -24,7 +24,7 @@ $sofia: 'Sofia', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
 // Components
 //
 
-$max-width: 1160px;
+$max-width: 1200px;
 
 $ribbon-peek: 46px;
 $ribbon-peek-offset: 12px;
